fix overflow behavior

--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,10 @@ a:hover {
 
 body {
     margin: 0;
-    display: flex;
-    place-items: center;
     min-width: 320px;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 @media (prefers-color-scheme: light) {
